--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "gatsby-transformer-sharp": "^4.0.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
-    "postcss": "^8.2.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
@@ -46,7 +45,11 @@
     "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "dumper.js": "^1.3.1",
-    "prettier": "2.2.1"
+    "gatsby-plugin-postcss": "^5.15.0",
+    "postcss": "^8.4.14",
+    "prettier": "2.2.1",
+    "tailwindcss": "^3.0.24"
   }
 }
